Fixed sidebar gap on mobile

--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -42,6 +42,7 @@ $tablet-width: 767px;
   float: none !important;
   backdrop-filter: blur(1px) !important;
   border: none !important;
+  margin-left: 0;
 
   details {
     max-height: 42px;
